# ML-Py

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: ejemplo.csv
exports/: ejemplo_guardado.csv
src/: logging_config.py  main.py
src/python_automatizacion/: __init__.py
src/python_automatizacion.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/python_automatizacion/automatizacion/: __init__.py  limpieza.py  primer_pipeline.py
src/python_automatizacion/datos/: __init__.py  estadisticas.py  graficos.py  limpieza.py  utilidades.py
tests/: test_analisis.py  test_basico.py  test_limpieza.py  test_transformacion.py
