[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_automatizacion"
version = "1.2.0"
description = "Proyecto de automatización y datos en Python"
authors = [
  { name="Victor Flores", email="vf03062002@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
  "openpyxl",
  "requests"
]

[tool.setuptools.packages.find]
where = ["src"]
